Project

General

Profile

Actions

Bug #52630

closed

../src/crimson/net/SocketMessenger.cc:149:27: error: ‘sleep’ is not a member of ‘seastar’

Added by Samuel Just over 2 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ceph-perf/build [sjust/wip-52623●] » ninja -j50 all tests
[32/1018] Building CXX object src/crimson/CMakeFiles/crimson.dir/net/SocketMessenger.cc.o
FAILED: src/crimson/CMakeFiles/crimson.dir/net/SocketMessenger.cc.o
/usr/bin/ccache /usr/bin/c++ -DBOOST_ASIO_DISABLE_CONCEPTS -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DHAVE_CONFIG_H -DSEASTAR_API_LEVEL=6 -DWITH_SEASTAR=1 -D_FILE_OFFSET_BITS=64 -D_FORTIFY_SOURC
E=2 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -Isrc/include -I../src -I../src/seastar/include -Isrc/seastar/gen/include -isystem boost/include -isystem include -isystem ../src/xxHash -isystem .
./src/rapidjson/include -fno-omit-frame-pointer -O2 -g -DNDEBUG -fPIC -U_FORTIFY_SOURCE -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas
-Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -fno-new-ttp-matching -fstack-protector-strong -fdiagnostics-color=auto -fno-builtin-malloc -f
no-builtin-calloc -fno-builtin-realloc -fno-builtin-free -ftemplate-backtrace-limit=0 -Wno-non-virtual-dtor -std=gnu++17 -U_FORTIFY_SOURCE -Wno-maybe-uninitialized -DSEASTAR_SSTRING -Wno-error=unused-result -std=c++17 -MD -MT src/crimson/C
MakeFiles/crimson.dir/net/SocketMessenger.cc.o -MF src/crimson/CMakeFiles/crimson.dir/net/SocketMessenger.cc.o.d -o src/crimson/CMakeFiles/crimson.dir/net/SocketMessenger.cc.o -c ../src/crimson/net/SocketMessenger.cc
../src/crimson/net/SocketMessenger.cc: In lambda function:
../src/crimson/net/SocketMessenger.cc:149:27: error: ‘sleep’ is not a member of ‘seastar’
149 | return seastar::sleep( | ^~~

Actions #1

Updated by Samuel Just over 2 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF